version/0.12/_sources/api/solver/_autosummary/settings/droplet_particle_child.rst.txt
:orphan:

.. _droplet_particle_child:

droplet_particle_child
======================

.. currentmodule:: ansys.fluent.core.solver.settings_231.droplet_particle_child

.. autoclass:: droplet_particle_child
    :show-inheritance:
    :undoc-members:
.. rubric:: Children

======================================================================   ===========================================

Child                                                                                                        Summary

======================================================================   ===========================================
:ref:`density <density_3>`                                                                          'density' child.

:ref:`thermal_conductivity <thermal_conductivity_3>`                                   'thermal_conductivity' child.

:ref:`vaporization_model <vaporization_model>`                                           'vaporization_model' child.

:ref:`thermolysis_model <thermolysis_model>`                                              'thermolysis_model' child.

:ref:`latent_heat <latent_heat_1>`                                                              'latent_heat' child.

:ref:`volatile_fraction <volatile_fraction>`                                              'volatile_fraction' child.

:ref:`heat_of_pyrolysis <heat_of_pyrolysis>`                                              'heat_of_pyrolysis' child.

:ref:`specific_heat <specific_heat_3>`                                                        'specific_heat' child.

:ref:`binary_diffusivity <binary_diffusivity_1>`                                         'binary_diffusivity' child.

:ref:`diffusivity_reference_pressure <diffusivity_reference_pressure>`       'diffusivity_reference_pressure' child.

:ref:`averaging_coefficient_t <averaging_coefficient_t>`                            'averaging_coefficient_t' child.

:ref:`averaging_coefficient_y <averaging_coefficient_y>`                            'averaging_coefficient_y' child.

:ref:`vapor_pressure <vapor_pressure>`                                                       'vapor_pressure' child.

:ref:`molecular_weight <molecular_weight_1>`                                               'molecular_weight' child.

:ref:`vaporization_temperature <vaporization_temperature>`                         'vaporization_temperature' child.

:ref:`boiling_point <boiling_point>`                                                          'boiling_point' child.

:ref:`thermophoretic_co <thermophoretic_co>`                                              'thermophoretic_co' child.

:ref:`scattering_factor <scattering_factor_1>`                                            'scattering_factor' child.

:ref:`emissivity <emissivity_1>`                                                                 'emissivity' child.

:ref:`viscosity <viscosity_2>`                                                                    'viscosity' child.

:ref:`dpm_surften <dpm_surften_1>`                                                              'dpm_surften' child.

:ref:`electric_conductivity <electric_conductivity_1>`                                'electric_conductivity' child.

:ref:`dual_electric_conductivity <dual_electric_conductivity_1>`                 'dual_electric_conductivity' child.

:ref:`magnetic_permeability <magnetic_permeability>`                                  'magnetic_permeability' child.

:ref:`charge_density <charge_density>`                                                       'charge_density' child.

======================================================================   ===========================================

.. rubric:: Included in:

==========================================   =============================

Parent                                                             Summary

==========================================   =============================
:ref:`droplet_particle <droplet_particle>`       'droplet_particle' child.

:ref:`mixture_species <mixture_species_1>`        'mixture_species' child.

==========================================   =============================

